Fixed rules panel being too wide on mobiles when on a page for a specific demon

--- a/static/css/demonlist.v2.1.css
+++ b/static/css/demonlist.v2.1.css
@@ -61,6 +61,9 @@ tr:nth-child(even) {
   #rules,
   #discord {
     order: -1;
+  }
+
+  #discord {
     width: 100%;
   }
 
